<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoadCentral</string>
    <string name="action_settings">Settings</string>
    <string name="action_balance_inquiry">Balance Inquiry</string>
    <string name="action_balance_inquiry_confirm">This will send a balance inquiry SMS</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="confirmation">Confirmation</string>
    <string name="loading">Loading</string>
    <string name="quantity">Quantity</string>
    <string name="send">Send</string>
    <string name="about">About</string>
    <string name="set_sms_password">Set SMS password</string>
    <string name="enter_password">Enter Password</string>
    <string name="sell_product">Sell Product</string>
    <string name="balance_inquiry">Balance Inquiry</string>
    <string name="balance_inquiry_message">This will send a balance inquiry SMS</string>
    <string name="invalid_password_format">Please enter a valid password!</string>
    <string name="select_product">Select product</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="mobile_number">Mobile number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="invalid_quantity">Invalid product quantity</string>
    <string name="invalid_number">Invalid mobile number</string>
    <string name="send_confirmation_fixed">This will send %1$s (%2$s) to %3$s</string>
    <string name="send_confirmation_variable">This will send P%1$s load (%2$s) to %3$s</string>
    <string name="select_access_number">Pick access number to use</string>
    <string name="select_sim">Select SIM to use</string>
    <string name="sending_sms">Sending SMS&#8230;</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="application">Application</string>
    <string name="set_sms_password_desc">Set password for SMS commands</string>
    <string name="preferred_sim">Preferred SIM</string>
    <string name="preferred_sim_desc">Select SIM to use when sending SMS (for dual SIM phones)</string>
    <string name="access_numbers">Access Numbers</string>
    <string name="access_numbers_desc">Set a list of access numbers to use</string>
    <string name="use_preferred_access_number">Use preferred access number</string>
    <string name="use_preferred_access_number_desc">Use the preferred access number configured below</string>
    <string name="select_preferred_access_number">Select preferred access number</string>
    <string name="select_preferred_access_number_desc">Select the preferred access number to use</string>
    <string name="sms_sent">Message was successfully sent</string>
    <string name="sms_not_sent">Message not sent. Error code: %1$d</string>
    <string name="sms_not_sent_code">Message not sent</string>
    <string name="add_access_number">Add access number</string>
    <string name="delete_access_number">Delete access number</string>
    <string name="tap_for_more_info">Tap for more information</string>
    <string name="loadcentral_for_android">LoadCentral for Android</string>
    <string name="version">Version %s</string>
    <string name="created_by">Developed by Raph Marco</string>
    <string name="app_disclaimer">
        This is a 3rd party app and is in no way sponsored, endorsed, or administered by
        LoadCentral or Uniwiz Trade Sales Inc. This app is not liable for any damages due
        to any interaction with this app. By using this app, you agree to the terms stated
        here.
    </string>
    <string name="app_privacy_policy">Privacy Policy</string>
    <string name="app_privacy_policy_content">
        This application does not collect and transmit any data from your phone. The permissions
        requested by this app and it\'s usage are the following: \n\n1. Sending SMS - this is used to
        send SMS command to LoadCentral access numbers. It will not be used for purposes other than
        communicating with LoadCentral access numbers. \n\n2. Reading phone state - this is used to check
        if the phone has dual SIM so that you can have choices what SIM to use when sending SMS.
    </string>

</resources>
