<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".AboutScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:paddingTop="72dp"
        android:paddingBottom="72dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loadcentral_for_android"
            android:textSize="28sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:id="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/version"
            android:textColor="#FFFFFF"
            android:id="@+id/app_version"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/created_by"
            android:textColor="#5998D1"
            android:id="@+id/textView3"
            android:layout_above="@+id/textView4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_disclaimer"
            android:textSize="13sp"
            android:textColor="#5998D1"
            android:id="@+id/textView4"
            android:layout_above="@+id/privacy_policy"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_privacy_policy"
            android:textSize="20sp"
            android:textColor="#CCCCCC"
            android:id="@+id/privacy_policy"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

</RelativeLayout>
